moving files to folders

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,3 +1,11 @@
+@mixin clearfix {
+  & :after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
+
 $colorPrimary: #2E426C;
 $colorSecondary:#262;
 $colorWords: 4C5DFF;
