--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,84 @@
+html {
+  font-size: 100%;
+}
+
 body {
-  background-color: #2E426C;
+  background: #5333FF;
+  overflow: auto;
+  font-family: Arial, Helvetica, sans-serif;
   align-items: center;
   justify-content: center;
 }
 
-button {
-  border: none;
-  padding: 1em;
-  margin: 2% 2% 2% 2%;
-  font-weight: bold;
-  color: black;
-  color: #333;
-  text-shadow: 1px 2px 3px #3440ae;
+.intro {
   font-size: 3em;
-  height: 50%;
-  width: 50%;
+  color: #FFF650;
+  width: 95%;
+  margin: .5em;
+  text-align: center;
+}
+
+p {
+  font-size: 2em;
+  position: absolute;
+  margin: 1em 1em 1em 1em;
+  color: #2d13b2;
+  align-items: center;
+  justify-content: center;
+}
+
+#container {
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#squares {
+  width: 100%;
+  height:600px;
+  position: absolute;
+  left: 4%;
+  /*top: 0.5em;*/
+  /*background-color: white;*/
+  -webkit-transform: rotateZ(0deg);
+  transform: rotateX(45deg);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  display: -webkit-flex;
+  display: flex;
+}
+
+a.square {
+  width: 200px;
+  height: 200px;
+  float: left;
+  margin: 0 10px 10px 0;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+
+a.square:before {
+  position: absolute;
+  content: '';
+  width: 200px;
+  height: 200px;
+  background: #FFF650;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  pointer-events: none;
+  align-items: center;
+  justify-content: center;
+}
+
+a.square:hover:before {
+  align-items: center;
+  justify-content: center;
+  background: #4aCC2a;
+  -webkit-transform: translate3d(0, 0, 20px);
+  transform: translate3d(0, 0, 20px);
+  box-shadow: 40px 40px 20px rgba(0, 0, 0, .8);
 }
