--- a/public/styles.css
+++ b/public/styles.css
@@ -6,10 +6,16 @@ body {
   background: #5333FF;
   overflow: auto;
   font-family: Arial, Helvetica, sans-serif;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;
+  justify-content: center;*/
 }
 
+.col1 {
+  float: left;
+  width: 5%;
+  position: relative;
+  height: 800px;
+}
 .intro {
   font-size: 3em;
   color: #FFF650;
@@ -21,34 +27,36 @@ body {
 p {
   font-size: 2em;
   position: absolute;
-  margin: 1em 1em 1em 1em;
+  margin: 2.5em 1em 1em 1em;
   color: #2d13b2;
+  text-align: center;
+  /*align-content: center;
   align-items: center;
-  justify-content: center;
+  justify-content: center;*/
 }
 
-#container {
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-  display: -webkit-flex;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+/*#container {
+  -webkit-perspective: 500px;
+  perspective:500px;*/
+  /*display: -webkit-flex;
+  display: flex;*/
+  /*align-items: center;
+  justify-content: center;*/
+/*}*/
 
 #squares {
-  width: 100%;
-  height:600px;
-  position: absolute;
-  left: 4%;
-  /*top: 0.5em;*/
+  width: 900px;
+  height:200px;
+  /*position: absolute;*/
+  /*left: 25%;*/
+  /*top: 1em;*/
   /*background-color: white;*/
-  -webkit-transform: rotateZ(0deg);
-  transform: rotateX(45deg);
+  -webkit-transform: rotateZ(55deg);
+  transform: rotateX(55deg);
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
-  display: -webkit-flex;
-  display: flex;
+  /*display: -webkit-flex;
+  display: flex;*/
 }
 
 a.square {
@@ -57,10 +65,14 @@ a.square {
   float: left;
   margin: 0 10px 10px 0;
   cursor: pointer;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;
+  justify-content: center;*/
 }
 
+p < a.square {
+  text-align: center;
+
+}
 a.square:before {
   position: absolute;
   content: '';
@@ -70,15 +82,15 @@ a.square:before {
   -webkit-transition: all 1s;
   transition: all 1s;
   pointer-events: none;
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;
+  justify-content: center;*/
 }
 
 a.square:hover:before {
-  align-items: center;
-  justify-content: center;
+  /*align-items: center;
+  justify-content: center;*/
   background: #4aCC2a;
-  -webkit-transform: translate3d(0, 0, 20px);
+  -webkit-transform: translate3d(0, 0, 40px);
   transform: translate3d(0, 0, 20px);
   box-shadow: 40px 40px 20px rgba(0, 0, 0, .8);
 }
